@@ -1,5 +1,9 @@
 2004-05-20  Daniel Elstner  <daniel.elstner@gmx.net>
 
+	* src/mainwindow.cc: Break apart a couple of uber-long lines.
+
+2004-05-20  Daniel Elstner  <daniel.elstner@gmx.net>
+
 	* src/aboutdialog.cc (package_title): New string constant which
 	defines the package title string plus surrounding markup.
 	(AboutDialog::create): Use the separated package_title constant.
